# gp

./: .gitignore  DEMO_GUIDE.md  LAUNCH.md  Makefile  QUICK_START.md  README.md  ReID_Experiments_Complete.xlsx  SETUP.md  SETUP_GUIDE.md  _build_14aa_notebook.py  _bump_version.py  _check_cell9.py  _diff_api.txt  _diff_gitignore.txt  _diff_refinement.txt  _diff_stage2.txt  _diff_timeline.txt  _finalize_v71.py  _list_cells.py  _prep_v67.py  _prep_v68.py  _prep_v69.py  _prep_v70.py  _prep_v71.py  _test_cfg.py  _tmp_edit.py  backend_api.py  backend_requirements.txt  build_veri_notebook.py  dataset-metadata.json  generate_experiments_excel.py  kill_backend.py  proposed_arch.txt  pyproject.toml  requirements.txt  run_metadata.json  run_stage_payload.json  script.md  script_.md  scripts.md  (+12 more)
.github/: copilot-instructions.md
backend/: app.py  config.py  dependencies.py  state.py
clips/: README.md  capture_animation.py  heatmap-anim.css  heatmap-anim.js  index.html  voiceover_script_15s.txt
configs/: default.yaml  model_registry.schema.json  model_registry.yaml
docs/: BREAKTHROUGH_PLAN.md  SOTA_ANALYSIS.md  architecture.md  data_contracts.md  data_flow.md  dataset_guide.md  experiment-log.md  experiment_log.md  findings.md  integration-status.md  kaggle_training_guide.md  model-cards.md  models.generated.md  models.md  mvdetr-integration.md  paper-draft.md  paper-strategy.md  pipeline-person.md  pipeline-vehicle.md  reproduction.md  research_papers_and_metrics.md  setup_guide.md  system-comparative-analysis.md  team_workload.md
frontend/: .env.example  .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
gp__Copy_/: main.tex  (+1 more)
(+749 files in other folders)
